--- a/@project/package.json
+++ b/@project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-name",
+  "name": "@project-name",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.1",
+    "handlebars": "^4.0.11",
     "handlebars-loader": "^1.6.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
